--- a/index.html
+++ b/index.html
@@ -29,17 +29,11 @@
 
 		<section>
 			<p>I'm an aspiring full stack web devloper &amp; student based in Wisconsin.</p>
-			<p>I will be attending UW Platteville in the Fall, where I will be majoring in Computer Science!</p>
 		</section>
 
-		<!-- <section>
-			<p><a href="https://kbrsh.github.io/moon" target="_blank" rel="noopener">first</a> word goes before the a, template</p>
-		</section> -->
-
 		<section>
-			<!-- writing on my <a href="https://blog.kabir.sh" target="_blank" rel="noopener">Blog</a>, my thoughts on <a href="https://twitter.com/kbrshah" target="_blank" rel="noopener">Twitter</a>, and my -->
 			<p>Find my code on <a href="https://github.com/zangoran" target="_blank" rel="noopener">GitHub</a>.</p>
-			<p>Reach out by sending me an <a href="mailto:hey@zachthe.dev?Subject=Hey" rel="noopener">Email</a>.</p>
+			<p>Send me an <a href="mailto:hey@zachthe.dev?Subject=Hey" rel="noopener">Email</a>.</p>
 		</section>
 	</body>
 </html>
