update github link

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		</section>
 
 		<section>
-			<p>Find my code on <a href="https://github.com/zangoran" target="_blank" rel="noopener">GitHub</a>.</p>
+			<p>Find my code on <a href="https://github.com/ZachTheDev" target="_blank" rel="noopener">GitHub</a>.</p>
 			<p>Send me an <a href="mailto:hey@zachthe.dev?Subject=Hey" rel="noopener">Email</a>.</p>
 		</section>
 	</body>
