--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="description" content="Maker of things.">
 		<meta name="author" content="Zachh Landquist">
 
-		<title>Hey!</title>
+		<title>Zach the Dev</title>
 
 		<link rel="shortcut icon" href="./img/logoFill.png"/>
 
