--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
 		<link rel="stylesheet" type="text/css" href="./css/styles.css" />
 
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-
+		
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-KFKGTSXF02"></script>
+		<script>
+  			window.dataLayer = window.dataLayer || [];
+  			function gtag(){dataLayer.push(arguments);}
+  			gtag('js', new Date());
+			gtag('config', 'G-KFKGTSXF02');
+		</script>
 	</head>
 
 	<body>
