--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
   			gtag('js', new Date());
 			gtag('config', 'G-KFKGTSXF02');
 		</script>
+		
+		<!-- Cloudflare Web Analytics -->
+		<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "270b459690f2459a8dd70d8c3ed53e7a"}'></script>
+		<!-- End Cloudflare Web Analytics -->
 	</head>
 
 	<body>
