--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Maker of things.">
-		<meta name="author" content="Zach Landquist">
+		<meta name="author" content="ZachTheDev">
 
 		<title>Zach the Dev</title>
 
