--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
 		<meta name="description" content="Maker of things.">
 		<meta name="author" content="ZachTheDev">
 
-		<title>Zach the Dev</title>
+		<title>Zach The Dev</title>
 
-		<link rel="shortcut icon" href="./img/logoFill.png"/>
-
-		<link rel="stylesheet" type="text/css" href="./fonts/fonts.css" />
+		<link rel="shortcut icon" href="./img/favicon.png"/>
+		
 		<link rel="stylesheet" type="text/css" href="./css/lib/grain.css" />
 		<link rel="stylesheet" type="text/css" href="./css/styles.css" />
 
-		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Outfit" rel="stylesheet">
 		
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-KFKGTSXF02"></script>
