Refactor, add 404, cleanup

--- a/index.html
+++ b/index.html
@@ -1,46 +1,48 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Maker of things.">
-		<meta name="author" content="ZachTheDev">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Maker of things." />
+    <meta name="author" content="ZachTheDev" />
 
-		<title>Zach The Dev</title>
+    <title>Zach The Dev</title>
 
-		<link rel="shortcut icon" href="./img/favicon.png"/>
-		
-		<link rel="stylesheet" type="text/css" href="./css/lib/grain.css" />
-		<link rel="stylesheet" type="text/css" href="./css/styles.css" />
+    <link rel="shortcut icon" href="/assets/images/favicon.png" />
 
-		<link href="https://fonts.googleapis.com/css?family=Outfit" rel="stylesheet">
-		
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-KFKGTSXF02"></script>
-		<script>
-  			window.dataLayer = window.dataLayer || [];
-  			function gtag(){dataLayer.push(arguments);}
-  			gtag('js', new Date());
-			gtag('config', 'G-KFKGTSXF02');
-		</script>
-	</head>
+    <link rel="stylesheet" type="text/css" href="/assets/css/grain.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/css/styles.css" />
 
-	<body>
-		<img src="./img/logo.png" alt="Personal Logo" />
+    <link href="https://fonts.googleapis.com/css?family=Outfit" rel="stylesheet" />
 
-		<section id="name">
-			<h1>I'm <span id="zach">zach</span><span id="the">the</span><span id="dev">.dev</span></h1>
-			<h1>and I make stuff</h1>
-		</section>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KFKGTSXF02"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+      gtag('config', 'G-KFKGTSXF02');
+    </script>
+  </head>
 
-		<section>
-			<p>I'm an aspiring full stack web devloper &amp; student based in Wisconsin.</p>
-		</section>
+  <body>
+    <img src="/assets/images/Kodebalt.svg" alt="Personal Logo" style="padding-top: 10%" />
 
-		<section>
-			<p>Find my code on <a href="https://github.com/ZachTheDev" target="_blank" rel="noopener">GitHub</a>.</p>
-			<p>Send me an <a href="mailto:hey@zachthe.dev?Subject=Hey" rel="noopener">Email</a>.</p>
-		</section>
-	</body>
+    <section id="name">
+      <h1>I'm <span id="zach">zach</span><span id="the">the</span><span id="dev">.dev</span></h1>
+      <h1>and I make stuff</h1>
+    </section>
+
+    <section>
+      <p>I'm an aspiring full stack web devloper &amp; student based in Wisconsin.</p>
+    </section>
+
+    <section>
+      <p>Find my code on <a href="https://zachthe.dev/github" target="_blank" rel="noopener">GitHub</a>.</p>
+      <p>Send me an <a href="mailto:hey@zachthe.dev?Subject=Hey" rel="noopener">Email</a>.</p>
+    </section>
+  </body>
 </html>
