--- a/resume/index.html
+++ b/resume/index.html
@@ -1,11 +1,130 @@
 <html>
-    <head>
-        <title>ZachTheDev: Resume</title>
-        <link rel="icon" href="../img/favicon.png" type="image/png">
-    </head>
-    <body>
-        <iframe src="/resume/web/viewer.html" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
-            Your browser doesn't support iframes
-        </iframe>
-    </body>
+  <head>
+    <title>ZachTheDev: Resume</title>
+    <link rel="icon" href="../img/favicon.png" type="image/png" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit:wght@200;400;500;700&display=swap" />
+    <style>
+      :root {
+        --md-ref-typeface-plain: 'Outfit';
+        --body-bg-color: rgb(212 212 215);
+        --md-sys-color-surface-container: #ffe9e4;
+        --md-sys-color-primary: #b02f00;
+        --md-sys-color-on-primary: #ffffff;
+        --md-sys-color-secondary: #9f4125;
+        --md-sys-color-outline: #907067;
+      }
+
+      @media (prefers-color-scheme: dark) {
+        :root:where(:not(.is-light)) {
+          --md-sys-color-surface-container: #2c1c17;
+          --md-sys-color-primary: #ffb5a0;
+          --md-sys-color-on-primary: #5f1500;
+          --md-sys-color-secondary: #ffb5a0;
+          --md-sys-color-outline: #ab8980;
+          --body-bg-color: rgb(42 42 46);
+        }
+
+        :root:where(.is-dark) {
+          --md-sys-color-surface-container: #2c1c17;
+          --md-sys-color-primary: #ffb5a0;
+          --md-sys-color-on-primary: #5f1500;
+          --md-sys-color-secondary: #ffb5a0;
+          --md-sys-color-outline: #ab8980;
+          --body-bg-color: rgb(42 42 46);
+        }
+      }
+
+      body,
+      html {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        font-family: Outfit, sans-serif;
+        background-color: var(--body-bg-color);
+      }
+
+      .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+      }
+
+      .iframe-wrapper {
+        flex: 1;
+        display: flex;
+        width: 100%;
+      }
+
+      iframe {
+        width: 100%;
+        height: 100%;
+        border: none;
+      }
+
+      #bar {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: max-content;
+        background-color: var(--md-sys-color-surface-container);
+        border: 1px solid var(--md-sys-color-outline);
+        border-radius: calc((2vmax + 2vmin) / 2);
+        margin: 0.5vmax;
+      }
+
+      /* Styles for phones */
+      @media only screen and (max-width: 480px) {
+        #button {
+          margin: 1vmax 2vmax;
+          transform: initial;
+        }
+      }
+
+      /* Styles for landscape-oriented phones */
+      @media only screen and (min-width: 481px) and (max-width: 767px) {
+        #button {
+          margin: 1vmax 2vmax;
+          transform: initial;
+        }
+      }
+
+      /* Styles for portrait-oriented tablets and small desktops */
+      @media only screen and (min-width: 768px) and (max-width: 1023px) {
+        #button {
+          margin: 1vmax 2vmax;
+          transform: scale(1.125);
+        }
+      }
+
+      /* Styles for regular desktops and laptops */
+      @media only screen and (min-width: 1024px) and (max-width: 1279px) {
+        #button {
+          margin: 1vmax 2vmax;
+          transform: scale(1.1875);
+        }
+      }
+
+      /* Styles for large desktops and high-resolution screens */
+      @media only screen and (min-width: 1280px) {
+        #button {
+          margin: 1vmax 2vmax;
+          transform: scale(1.25);
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <div class="iframe-wrapper">
+        <iframe src="/resume/web/viewer.html"> Your browser doesn't support iframes </iframe>
+      </div>
+      <div id="bar">
+        <md-filled-button id="button" href="/">Home</md-filled-button>
+      </div>
+    </div>
+    <script src="/components/button/button.js"></script>
+  </body>
 </html>
