Change 404 page message

--- a/404.html
+++ b/404.html
@@ -81,7 +81,7 @@
       <div class="box">
         <h1 id="header" class="text hidetext">Page Not Found</h1>
         <div id="subheaderContainer">
-          <p class="text hidetext">Sorry, but the page you were trying to view does not actually exist.</p>
+          <p class="text hidetext">Sorry, but the page you were trying to view does not exist.</p>
           <p id="text404" class="text hidetext">Error 404</p>
           <md-filled-button id="button" href="/">Home</md-filled-button>
         </div>
