--- a/404.html
+++ b/404.html
@@ -2,23 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Kodebalt: Page Not Found</title>
+    <title>Zach The Dev: Page Not Found</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Kodebalt: Sorry, but the page you were trying to view does not actually exist." />
-    <link rel="icon" type="image/svg+xml" href="/assets/images/favicon.svg" />
-    <link rel="alternate icon" type="image/png" href="/assets/images/favicon.png" />
-    <link rel="alternate icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png" />
-    <link rel="alternate icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png" />
-    <link rel="shortcut icon" href="/assets/images/favicon.ico" />
-    <link rel="manifest" href="site.webmanifest" />
-    <meta name="application-name" content="Kodebalt" />
-    <meta name="theme-color" content="#FF5722" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png" />
-    <link rel="apple-touch-icon-precomposed" href="/assets/images/apple-touch-icon-precomposed.png" />
-    <link rel="mask-icon" href="/assets/images/safari-pinned-tab.svg" color="#FF5722" />
-    <meta name="apple-mobile-web-app-title" content="Kodebalt" />
-    <meta name="msapplication-TileColor" content="#FF5722" />
-    <meta name="msapplication-config" content="/assets/images/browserconfig.xml" />
+    <meta name="description" content="Zach The Dev: Sorry, but the page you were trying to view does not actually exist." />
+    <link rel="icon" type="image/png" href="/assets/images/favicon.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit:wght@200;400;500;700&display=swap" />
     <link rel="stylesheet" href="/assets/css/404.css" />
     <style>
