--- a/resume/index.html
+++ b/resume/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>ZachTheDev: Resume</title>
-    <link rel="icon" href="../img/favicon.png" type="image/png" />
+    <link rel="icon" href="/assets/images/favicon.png" type="image/png" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit:wght@200;400;500;700&display=swap" />
     <style>
