--- a/resume/index.html
+++ b/resume/index.html
@@ -37,11 +37,12 @@
 
       body,
       html {
+        font-family: Outfit, sans-serif;
+        background-color: var(--body-bg-color);
         margin: 0;
         padding: 0;
         height: 100%;
-        font-family: Outfit, sans-serif;
-        background-color: var(--body-bg-color);
+        box-sizing: border-box;
       }
 
       .container {
@@ -62,6 +63,7 @@
         width: 100%;
         height: 100%;
         border: none;
+        box-sizing: border-box;
       }
 
       #bar {
