--- a/404.html
+++ b/404.html
@@ -70,12 +70,15 @@
         <div id="subheaderContainer">
           <p class="text hidetext">Sorry, but the page you were trying to view does not exist.</p>
           <p id="text404" class="text hidetext">Error 404</p>
-          <md-filled-button id="button" href="/">Home</md-filled-button>
+          <md-filled-button id="button" href="/">
+            Home
+            <svg slot="icon" viewBox="0 -960 960 960"><path d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z"/></svg>
+          </md-filled-button>
         </div>
       </div>
     </div>
     <p id="copyright" class="text hidetext">&copy; Beeswax Not Yours, Inc.</p>
-    <script src="/components/button/button.js"></script>
-    <script type="text/javascript" src="/assets/js/script.js"></script>
+    <script type="module" src="/components/material-components/bundled.min.js"></script>
+    <script type="text/javascript" src="/assets/js/404.js"></script>
   </body>
 </html>
