--- a/404.html
+++ b/404.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Zach The Dev: Sorry, but the page you were trying to view does not actually exist." />
     <link rel="icon" type="image/png" href="/assets/images/favicon.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit:wght@200;400;500;700&display=swap" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="/assets/css/404.css" />
     <style>
       #text404 {
@@ -72,7 +73,7 @@
           <p id="text404" class="text hidetext">Error 404</p>
           <md-filled-button id="button" href="/">
             Home
-            <svg slot="icon" viewBox="0 -960 960 960"><path d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z"/></svg>
+            <md-icon id="icon" slot="icon">home</md-icon>
           </md-filled-button>
         </div>
       </div>
