--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>Zach The Dev</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Maker of things." />
     <meta name="author" content="ZachTheDev" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/svg+xml" href="/assets/images/favicon.svg" />
     <link rel="alternate icon" type="image/png" href="/assets/images/favicon.png" />
     <link rel="shortcut icon" href="/assets/images/favicon.ico" />
