--- a/resume/index.html
+++ b/resume/index.html
@@ -1,6 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <meta charset="utf-8" />
     <title>ZachTheDev: Resume</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="/assets/images/favicon.png" type="image/png" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit:wght@200;400;500;700&display=swap" />
