--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Zach The Dev</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Maker of things." />
+    <meta name="description" content="Zach The Dev: Maker of things." />
     <meta name="author" content="ZachTheDev" />
     <link rel="icon" type="image/svg+xml" href="/assets/images/favicon.svg" />
     <link rel="alternate icon" type="image/png" href="/assets/images/favicon.png" />
