--- a/resume/index.html
+++ b/resume/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>ZachTheDev: Resume</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Zach The Dev: Resume" />
     <link rel="icon" href="/assets/images/favicon.png" type="image/png" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit:wght@200;400;500;700&display=swap" />
@@ -158,7 +159,7 @@
   <body>
     <div class="container">
       <div class="iframe-wrapper">
-        <iframe id="pdfjs" src="/resume/web/viewer.html" data-initial-src="/resume/web/viewer.html">
+        <iframe id="pdfjs" src="/resume/web/viewer.html" data-initial-src="/resume/web/viewer.html" title="PDF Viewer">
           Your browser doesn't support iframes
         </iframe>
       </div>
