Logo glow effect

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     <!-- End Google Analytics -->
   </head>
   <body>
-    <img id="logo" src="/assets/images/logo_circle.svg" alt="Personal Logo" />
+    <div id="logoContainer">
+      <img id="logoGlow" src="/assets/images/logo_circle.svg" alt="Personal Logo" />
+      <img id="logo" src="/assets/images/logo_circle.svg" alt="Personal Logo" />
+    </div>
     <section id="header" class="section text hidetext">
       <h1>
         Hey! I'm
