Test output for mobile debugging

--- a/resume/index.html
+++ b/resume/index.html
@@ -22,7 +22,7 @@
     <animated-md-fab id="fab" variant="secondary" label="Home" aria-label="Home">
       <md-icon id="icon" slot="icon">home</md-icon>
     </animated-md-fab>
-    <script type="module" src="/components/material-components/bundled.min.js"></script>
+    <script type="module" src="/components/material-components/bundled.js"></script>
     <script type="text/javascript" src="./index.js"></script>
   </body>
 </html>
