--- a/index.html
+++ b/index.html
@@ -35,8 +35,12 @@
     </section>
     <section class="section">
       <p class="text hidetext">I'm a web-focused programmer with experience using a variety of languages, platforms, and styles.</p>
-      <p class="text hidetext">I am also Skilled at leveraging a keen eye for detail to produce clever and well-crafted designs whose effort will not be unnoticed.</p>
-      <p class="text hidetext">I am also a quick learner with a strong passion for mastering effective problem-solving techniques.</p>
+      <p class="text hidetext">
+        Additionally, I am skilled at leveraging a keen eye for detail to produce clever and well-crafted designs whose effort will not be
+        unnoticed.
+      </p>
+      <p class="text hidetext">
+        Furthermore, I am a quick learner with a strong passion for mastering effective problem-solving techniques.
       </p>
     </section>
     <section class="section">
