--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="alternate icon" type="image/png" href="/assets/images/favicon.png" />
     <link rel="shortcut icon" href="/assets/images/favicon.ico" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;700&display=swap" />
-    <link rel="stylesheet" type="text/css" href="/assets/css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/css/index.css" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-KFKGTSXF02"></script>
     <script>
@@ -27,10 +27,8 @@
       <img id="logo" src="/assets/images/logo_circle.svg" alt="Personal Logo" />
     </div>
     <section id="header" class="section text hidetext">
-      <h1>
-        Hey! I'm
-        <div id="nameBox"><span id="zach">zach</span><span id="the">the</span><span id="dev">.dev</span></div>
-      </h1>
+      <h1>Hey! I'm</h1>
+      <h1 id="nameBox"><span id="zach">zach</span><span id="the">the</span><span id="dev">.dev</span></h1>
       <h1>and I make stuff</h1>
     </section>
     <section class="section">
