--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       function gtag() {
         dataLayer.push(arguments);
       }
-      (window.dataLayer = window.dataLayer || []), gtag('js', new Date()), gtag('config', 'G-KFKGTSXF02');
+      (window.dataLayer = window.dataLayer || []), gtag("js", new Date()), gtag("config", "G-KFKGTSXF02");
     </script>
     <!-- End Google Analytics -->
   </head>
