--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
     <section class="section">
       <p class="text hidetext">I'm a web-focused programmer with experience using a variety of languages, platforms, and styles.</p>
       <p class="text hidetext">
-        Additionally, I am skilled at leveraging a keen eye for detail to produce clever and well-crafted designs whose effort will not be
+        Moreover, I am skilled at leveraging a keen eye for detail to produce clever and well-crafted designs whose effort will not be
         unnoticed.
       </p>
       <p class="text hidetext">
-        Furthermore, I am a quick learner with a strong passion for mastering effective problem-solving techniques.
+        Additionally, I am a quick learner with a strong passion for mastering effective problem-solving techniques.
       </p>
     </section>
     <section class="section">
