--- a/resume/index.html
+++ b/resume/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Zach The Dev: View my resume using this modified PDF.js viewer." />
     <link rel="icon" href="/assets/images/favicon.png" type="image/png" />
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <meta name="robots" content="noindex, nofollow" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit:wght@200;400;500;700&display=swap" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="./index.css" />
