--- a/index.html
+++ b/index.html
@@ -2,13 +2,48 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Zach The Dev</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Zach The Dev: Maker of things." />
+    <title>Zach The Dev</title>
+    <meta name="description" content="Hey! I'm zachthe.dev and I make stuff" />
+    <meta name="keywords" content="ZachTheDev, Zach, The Dev, Dev, ZachDev, Kodebalt, Kode, Codebalt, Code" />
     <meta name="author" content="ZachTheDev" />
+    <meta name="copyright" content="Copyright © ZachTheDev" />
+    <link rel="manifest" href="/assets/site.webmanifest" />
+    <meta name="application-name" content="Kodebalt" />
+    <meta name="theme-color" content="#FF5722" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Zach The Dev",
+        "alternateName": ["ZachTheDev", "Zach", "ZachDev"],
+        "url": "https://zachthe.dev/"
+      }
+    </script>
     <link rel="icon" type="image/svg+xml" href="/assets/images/favicon.svg" />
     <link rel="alternate icon" type="image/png" href="/assets/images/favicon.png" />
+    <link rel="alternate icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png" />
+    <link rel="alternate icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png" />
     <link rel="shortcut icon" href="/assets/images/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png" />
+    <link rel="apple-touch-icon-precomposed" href="/assets/images/apple-touch-icon-precomposed.png" />
+    <link rel="mask-icon" href="/assets/images/safari-pinned-tab.svg" color="#FF5722" />
+    <meta name="apple-mobile-web-app-title" content="Kodebalt" />
+    <meta name="msapplication-TileColor" content="#FF5722" />
+    <meta name="msapplication-config" content="/assets/browserconfig.xml" />
+    <meta property="og:site_name" content="Zach The Dev" />
+    <meta property="og:url" content="https://zachthe.dev" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Zach The Dev" />
+    <meta property="og:description" content="Hey! I'm zachthe.dev and I make stuff" />
+    <meta property="og:logo" content="https://zachthe.dev/assets/images/logo.png" />
+    <meta property="og:image" content="https://zachthe.dev/assets/images/og_protocol.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="zachthe.dev" />
+    <meta property="twitter:url" content="https://zachthe.dev" />
+    <meta name="twitter:title" content="Zach The Dev" />
+    <meta name="twitter:description" content="Hey! I'm zachthe.dev and I make stuff" />
+    <meta name="twitter:image" content="https://zachthe.dev/assets/images/og_protocol.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;700&display=swap" />
     <link rel="stylesheet" type="text/css" href="/assets/css/index.css" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
