--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         "url": "https://zachthe.dev/"
       }
     </script>
-    <link rel="icon" type="image/svg+xml" href="/assets/images/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" sizes="48x48" />
+    <link rel="icon" type="image/svg+xml" href="/assets/images/favicon.svg" sizes="any" />
     <link rel="alternate icon" type="image/png" href="/assets/images/favicon.png" />
     <link rel="alternate icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png" />
     <link rel="alternate icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png" />
-    <link rel="shortcut icon" href="/assets/images/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="apple-touch-icon-precomposed" href="/assets/images/apple-touch-icon-precomposed.png" />
     <link rel="mask-icon" href="/assets/images/safari-pinned-tab.svg" color="#FF5722" />
     <meta name="apple-mobile-web-app-title" content="Kodebalt" />
