--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="ZachTheDev" />
     <meta name="copyright" content="Copyright © ZachTheDev" />
     <link rel="manifest" href="/assets/site.webmanifest" />
-    <meta name="application-name" content="Kodebalt" />
+    <meta name="application-name" content="Zach The Dev" />
     <meta name="theme-color" content="#FF5722" />
     <script type="application/ld+json">
       {
@@ -21,14 +21,14 @@
       }
     </script>
     <link rel="shortcut icon" href="/favicon.ico" sizes="48x48" />
-    <link rel="alternate icon" type="image/png" href="/assets/images/favicon.png" />
-    <link rel="alternate icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png" />
-    <link rel="alternate icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png" />
+    <link rel="alternate icon" type="image/png" href="/assets/images/favicon-16x16.png" sizes="16x16" />
+    <link rel="alternate icon" type="image/png" href="/assets/images/favicon-32x32.png" sizes="32x32" />
+    <link rel="alternate icon" type="image/png" href="/assets/images/favicon.png" sizes="48x48" />
     <link rel="icon" type="image/svg+xml" href="/assets/images/favicon.svg" sizes="any" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="apple-touch-icon-precomposed" href="/assets/images/apple-touch-icon-precomposed.png" />
-    <link rel="mask-icon" href="/assets/images/safari-pinned-tab.svg" color="#FF5722" />
-    <meta name="apple-mobile-web-app-title" content="Kodebalt" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
+    <link rel="apple-touch-icon-precomposed" href="/assets/images/apple-touch-icon-precomposed.png" sizes="180x180" />
+    <link rel="mask-icon" href="/assets/images/safari-pinned-tab.svg" color="#FF5722" sizes="any" />
+    <meta name="apple-mobile-web-app-title" content="Zach The Dev" />
     <meta name="msapplication-TileColor" content="#FF5722" />
     <meta name="msapplication-config" content="/assets/browserconfig.xml" />
     <meta property="og:site_name" content="Zach The Dev" />
