Change header to be only one h1

--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
       <img id="logoGlow" src="/assets/images/logo_circle.svg" alt="Personal Logo" />
       <img id="logo" src="/assets/images/logo_circle.svg" alt="Personal Logo" />
     </div>
-    <section id="header" class="section text hidetext">
-      <h1>Hey! I'm</h1>
-      <h1 id="nameBox"><span id="zach">zach</span><span id="the">the</span><span id="dev">.dev</span></h1>
-      <h1>and I make stuff</h1>
-    </section>
+    <h1 id="header" class="section text hidetext">
+      <span>Hey! I'm</span>
+      <span id="nameBox"><span id="zach">zach</span><span id="the">the</span><span id="dev">.dev</span></span>
+      <span>and I make stuff</span>
+    </h1>
     <section class="section">
       <p class="text hidetext">I'm a web-focused programmer with experience using a variety of languages, platforms, and styles.</p>
       <p class="text hidetext">
