--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Zach The Dev</title>
+    <link rel="canonical" href="https://zachthe.dev/" />
     <meta name="description" content="Hey! I'm zachthe.dev and I make stuff" />
     <meta name="keywords" content="ZachTheDev, Zach, The Dev, Dev, ZachDev, Kodebalt, Kode, Codebalt, Code" />
     <meta name="author" content="ZachTheDev" />
