--- a/resume/index.html
+++ b/resume/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Zach The Dev: Resume</title>
+    <link rel="canonical" href="https://zachthe.dev/resume/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Zach The Dev: View my resume using this modified PDF.js viewer." />
     <link rel="icon" href="/assets/images/favicon.png" type="image/png" />
