--- a/resume/index.html
+++ b/resume/index.html
@@ -11,6 +11,15 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit:wght@200;400;500;700&display=swap" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="./index.css" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KFKGTSXF02"></script>
+    <script>
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      (window.dataLayer = window.dataLayer || []), gtag("js", new Date()), gtag("config", "G-KFKGTSXF02");
+    </script>
+    <!-- End Google Analytics -->
   </head>
   <body>
     <div class="container">
