--- a/resume/index.html
+++ b/resume/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="./index.css" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KFKGTSXF02"></script>
+    <script async src="https://proxy.kodebalt.com/https%3A%2F%2Fwww.googletagmanager.com%2Fgtag%2Fjs%3Fid%3DG-KFKGTSXF02"></script>
     <script>
       function gtag() {
         dataLayer.push(arguments);
