--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;700&display=swap" />
     <link rel="stylesheet" type="text/css" href="/assets/css/index.css" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://proxy.kodebalt.com/https%3A%2F%2Fwww.googletagmanager.com%2Fgtag%2Fjs%3Fid%3DG-KFKGTSXF02"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KFKGTSXF02"></script>
     <script>
       function gtag() {
         dataLayer.push(arguments);
