Clear the clutter and Refactor
- realfavicongenerator.net updated and provided a new output
- brought pages back up to speed with other sites

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="keywords" content="ZachTheDev, Zach, The Dev, Dev, ZachDev, Kodebalt, Kode, Codebalt, Code" />
     <meta name="author" content="ZachTheDev" />
     <meta name="copyright" content="Copyright © ZachTheDev" />
-    <link rel="manifest" href="/assets/site.webmanifest" />
     <meta name="application-name" content="Zach The Dev" />
+    <link rel="manifest" href="/assets/site.webmanifest" />
     <meta name="theme-color" content="#FF5722" />
     <script type="application/ld+json">
       {
@@ -21,17 +21,11 @@
         "url": "https://zachthe.dev/"
       }
     </script>
-    <link rel="shortcut icon" href="/favicon.ico" sizes="48x48" />
-    <link rel="alternate icon" type="image/png" href="/assets/images/favicon-16x16.png" sizes="16x16" />
-    <link rel="alternate icon" type="image/png" href="/assets/images/favicon-32x32.png" sizes="32x32" />
-    <link rel="alternate icon" type="image/png" href="/assets/images/favicon.png" sizes="48x48" />
-    <link rel="icon" type="image/svg+xml" href="/assets/images/favicon.svg" sizes="any" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
-    <link rel="apple-touch-icon-precomposed" href="/assets/images/apple-touch-icon-precomposed.png" sizes="180x180" />
-    <link rel="mask-icon" href="/assets/images/safari-pinned-tab.svg" color="#FF5722" sizes="any" />
+    <link rel="shortcut icon" href="/favicon.ico?v=1" sizes="48x48" />
+    <link rel="alternate icon" type="image/png" href="/assets/images/favicon-96x96.png?v=1" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/assets/images/favicon.svg?v=1" />
+    <link rel="apple-touch-icon" href="/assets/images/apple-touch-icon.png?v=1" sizes="180x180" />
     <meta name="apple-mobile-web-app-title" content="Zach The Dev" />
-    <meta name="msapplication-TileColor" content="#FF5722" />
-    <meta name="msapplication-config" content="/assets/browserconfig.xml" />
     <meta property="og:site_name" content="Zach The Dev" />
     <meta property="og:url" content="https://zachthe.dev" />
     <meta property="og:type" content="website" />
@@ -39,6 +33,7 @@
     <meta property="og:description" content="Hey! I'm zachthe.dev and I make stuff" />
     <meta property="og:logo" content="https://zachthe.dev/assets/images/logo.png" />
     <meta property="og:image" content="https://zachthe.dev/assets/images/og_protocol.png" />
+    <meta property="fb:app_id" content="1273332777248741" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="twitter:domain" content="zachthe.dev" />
     <meta property="twitter:url" content="https://zachthe.dev" />
@@ -83,6 +78,6 @@
       </p>
       <p class="text hidetext">Send me an <a class="link" href="mailto:hey@zachthe.dev?Subject=Hey" rel="noopener">Email</a>.</p>
     </section>
-    <script type="text/javascript" src="/assets/js/index.js"></script>
+    <script type="module" src="/assets/js/index.js"></script>
   </body>
 </html>
