--- a/404.html
+++ b/404.html
@@ -2,66 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Zach The Dev: Page Not Found</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Zach The Dev: Sorry, but the page you were trying to view does not actually exist." />
-    <link rel="icon" type="image/png" href="/assets/images/favicon.png" />
+    <title>Zach The Dev: Page Not Found</title>
+    <meta name="description" content="Sorry, but the page you were trying to view does not exist." />
+    <meta name="application-name" content="Zach The Dev" />
+    <link rel="manifest" href="/assets/site.webmanifest" />
+    <meta name="theme-color" content="#FF5722" />
+    <link rel="shortcut icon" href="/favicon.ico?v=1" sizes="48x48" />
+    <link rel="alternate icon" type="image/png" href="/assets/images/favicon-96x96.png?v=1" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/assets/images/favicon.svg?v=1" sizes="any" />
+    <link rel="apple-touch-icon" href="/assets/images/apple-touch-icon.png?v=1" sizes="180x180" />
+    <meta name="apple-mobile-web-app-title" content="Zach The Dev" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit:wght@200;400;500;700&display=swap" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="/assets/css/404.css" />
-    <style>
-      #text404 {
-        text-align: center;
-        text-align-last: initial;
-        line-height: initial;
-        font-style: italic;
-        padding-top: 1vmax;
-        font-size: 1.5vmax;
-      }
-
-      #button {
-        margin-top: 2.5vmax;
-      }
-
-      /* Styles for phones */
-      @media only screen and (max-width: 480px) {
-        #text404 {
-          font-size: 1.25vmax;
-        }
-
-        #button {
-          transform: initial;
-        }
-      }
-
-      /* Styles for landscape-oriented phones */
-      @media only screen and (min-width: 481px) and (max-width: 767px) {
-        #button {
-          transform: initial;
-        }
-      }
-
-      /* Styles for portrait-oriented tablets and small desktops */
-      @media only screen and (min-width: 768px) and (max-width: 1023px) {
-        #button {
-          transform: scale(1.125);
-        }
-      }
-
-      /* Styles for regular desktops and laptops */
-      @media only screen and (min-width: 1024px) and (max-width: 1279px) {
-        #button {
-          transform: scale(1.25);
-        }
-      }
-
-      /* Styles for large desktops and high-resolution screens */
-      @media only screen and (min-width: 1280px) {
-        #button {
-          transform: scale(1.5);
-        }
-      }
-    </style>
   </head>
 
   <body>
@@ -78,7 +32,8 @@
         </div>
       </div>
     </div>
-    <script type="module" src="/components/material-components/bundled.min.js"></script>
-    <script type="text/javascript" src="/assets/js/404.js"></script>
+    <script src="/components/icon/icon.js"></script>
+    <script src="/components/button/button.js"></script>
+    <script type="module" src="/assets/js/404.js"></script>
   </body>
 </html>
