--- a/resume/index.html
+++ b/resume/index.html
@@ -2,11 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Zach The Dev: Resume</title>
     <link rel="canonical" href="https://zachthe.dev/resume/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Zach The Dev: View my resume using this modified PDF.js viewer." />
-    <link rel="icon" href="/assets/images/favicon.png" type="image/png" />
+    <meta name="description" content="Zach The Dev: View my resume using a modified PDF.js viewer." />
+    <link rel="shortcut icon" href="/favicon.ico?v=1" sizes="48x48" />
+    <link rel="alternate icon" type="image/png" href="/assets/images/favicon-96x96.png?v=1" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/assets/images/favicon.svg?v=1" />
+    <link rel="apple-touch-icon" href="/assets/images/apple-touch-icon.png?v=1" sizes="180x180" />
+    <meta name="apple-mobile-web-app-title" content="Zach The Dev" />
+    <meta property="og:site_name" content="Zach The Dev" />
+    <meta property="og:url" content="https://zachthe.dev" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Zach The Dev" />
+    <meta property="og:description" content="Hey! I'm zachthe.dev and I make stuff" />
+    <meta property="og:logo" content="https://zachthe.dev/assets/images/logo.png" />
+    <meta property="og:image" content="https://zachthe.dev/assets/images/og_protocol.png" />
+    <meta property="fb:app_id" content="1273332777248741" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="zachthe.dev" />
+    <meta property="twitter:url" content="https://zachthe.dev" />
+    <meta name="twitter:title" content="Zach The Dev" />
+    <meta name="twitter:description" content="Hey! I'm zachthe.dev and I make stuff" />
+    <meta name="twitter:image" content="https://zachthe.dev/assets/images/og_protocol.png" />
     <meta name="robots" content="noindex, nofollow" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit:wght@200;400;500;700&display=swap" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Symbols+Outlined" rel="stylesheet" />
@@ -32,7 +50,7 @@
     <animated-md-fab id="fab" variant="secondary" label="Home" aria-label="Home">
       <md-icon id="icon" slot="icon">home</md-icon>
     </animated-md-fab>
-    <script type="module" src="/components/material-components/bundled.min.js"></script>
-    <script type="text/javascript" src="./index.js"></script>
+    <script type="module" src="/components/button/fab.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
