--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <p class="text hidetext">
         Find my code on <a class="link" href="https://zachthe.dev/github" target="_blank" rel="noopener">GitHub</a>.
       </p>
-      <p class="text hidetext">Send me an <a class="link" href="mailto:hey@zachthe.dev?Subject=Hey" rel="noopener">Email</a>.</p>
+      <p class="text hidetext">Send me an <a class="link" href="mailto:hey@zachthe.dev?Subject=Hey" rel="noopener">Email</a>. test</p>
     </section>
     <script type="module" src="/assets/js/index.js"></script>
   </body>
