--- a/resume/index.html
+++ b/resume/index.html
@@ -51,6 +51,6 @@
       <md-icon id="icon" slot="icon">home</md-icon>
     </animated-md-fab>
     <script type="module" src="/components/button/fab.js"></script>
-    <script type="module" src="./index.js"></script>
+    <script type="text/javascript" src="./index.js"></script>
   </body>
 </html>
