more testing output

--- a/resume/web/viewer.html
+++ b/resume/web/viewer.html
@@ -35,6 +35,12 @@ See https://github.com/adobe-type-tools/cmap-resources
     <link rel="stylesheet" href="viewer.css" />
 
     <script src="viewer.mjs" type="module"></script>
+
+    <script>
+      window.onload = function () {
+        console.log("viewer load");
+      };
+    </script>
   </head>
 
   <body tabindex="1">
