--- a/resume/index.html
+++ b/resume/index.html
@@ -42,7 +42,7 @@
   <body>
     <div class="container">
       <div class="iframe-wrapper">
-        <iframe id="pdfjs" src="/resume/web/viewer.html" data-initial-src="/resume/web/viewer.html" loading="lazy" title="PDF Viewer">
+        <iframe id="pdfjs" src="about:blank" data-initial-src="/resume/web/viewer.html" loading="lazy" title="PDF Viewer">
           Ope! Your browser doesn't support iframes.
         </iframe>
       </div>
