Change zoom without reloading iframe

--- a/resume/index.html
+++ b/resume/index.html
@@ -42,7 +42,7 @@
   <body>
     <div class="container">
       <div class="iframe-wrapper">
-        <iframe id="pdfjs" src="about:blank" data-initial-src="/resume/web/viewer.html" loading="lazy" title="PDF Viewer">
+        <iframe id="pdfjs" src="/resume/web/viewer.html" data-initial-src="/resume/web/viewer.html" loading="lazy" title="PDF Viewer">
           Ope! Your browser doesn't support iframes.
         </iframe>
       </div>
@@ -51,6 +51,6 @@
       <md-icon id="icon" slot="icon">home</md-icon>
     </animated-md-fab>
     <script type="module" src="/components/button/fab.js"></script>
-    <script type="text/javascript" src="./index.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
