Fixed: Mobile landscaping handling
- iframe does not reload now, uses PDF.js API

--- a/resume/index.html
+++ b/resume/index.html
@@ -42,9 +42,7 @@
   <body>
     <div class="container">
       <div class="iframe-wrapper">
-        <iframe id="pdfjs" src="/resume/web/viewer.html" data-initial-src="/resume/web/viewer.html" loading="lazy" title="PDF Viewer">
-          Ope! Your browser doesn't support iframes.
-        </iframe>
+        <iframe id="pdfjs" src="/resume/web/viewer.html" title="PDF Viewer"> Ope! Your browser doesn't support iframes. </iframe>
       </div>
     </div>
     <animated-md-fab id="fab" variant="secondary" label="Home" aria-label="Home">
