--- a/resume/web/viewer.html
+++ b/resume/web/viewer.html
@@ -223,7 +223,7 @@ See https://github.com/adobe-type-tools/cmap-resources
                   </div>
                   <!-- findbar -->
                 </div>
-                <div class="toolbarHorizontalGroup hiddenSmallView">
+                <!-- <div class="toolbarHorizontalGroup hiddenSmallView">
                   <button
                     class="toolbarButton"
                     title="Previous Page"
@@ -238,8 +238,8 @@ See https://github.com/adobe-type-tools/cmap-resources
                   <button class="toolbarButton" type="button" title="Next Page" id="next" tabindex="0" data-l10n-id="pdfjs-next-button">
                     <span data-l10n-id="pdfjs-next-button-label">Next</span>
                   </button>
-                </div>
-                <div class="toolbarHorizontalGroup">
+                </div> -->
+                <!-- <div class="toolbarHorizontalGroup">
                   <span class="loadingInput start toolbarHorizontalGroup">
                     <input
                       type="number"
@@ -254,7 +254,7 @@ See https://github.com/adobe-type-tools/cmap-resources
                     />
                   </span>
                   <span id="numPages" class="toolbarLabel"></span>
-                </div>
+                </div> -->
               </div>
               <div id="toolbarViewerMiddle" class="toolbarHorizontalGroup">
                 <div class="toolbarHorizontalGroup">
@@ -282,11 +282,11 @@ See https://github.com/adobe-type-tools/cmap-resources
                 </div>
                 <span id="scaleSelectContainer" class="dropdownToolbarButton">
                   <select id="scaleSelect" title="Zoom" tabindex="0" data-l10n-id="pdfjs-zoom-select">
-                    <option id="pageAutoOption" title="" value="auto" selected="selected" data-l10n-id="pdfjs-page-scale-auto">
-                      Automatic Zoom
-                    </option>
+                    <option id="pageAutoOption" title="" value="auto" data-l10n-id="pdfjs-page-scale-auto">Automatic Zoom</option>
                     <option id="pageActualOption" title="" value="page-actual" data-l10n-id="pdfjs-page-scale-actual">Actual Size</option>
-                    <option id="pageFitOption" title="" value="page-fit" data-l10n-id="pdfjs-page-scale-fit">Page Fit</option>
+                    <option id="pageFitOption" title="" value="page-fit" selected="selected" data-l10n-id="pdfjs-page-scale-fit">
+                      Page Fit
+                    </option>
                     <option id="pageWidthOption" title="" value="page-width" data-l10n-id="pdfjs-page-scale-width">Page Width</option>
                     <option
                       id="customScaleOption"
@@ -311,7 +311,7 @@ See https://github.com/adobe-type-tools/cmap-resources
                 </span>
               </div>
               <div id="toolbarViewerRight" class="toolbarHorizontalGroup">
-                <div id="editorModeButtons" class="toolbarHorizontalGroup" role="radiogroup">
+                <!-- <div id="editorModeButtons" class="toolbarHorizontalGroup" role="radiogroup">
                   <div id="editorHighlight" class="toolbarButtonWithContainer">
                     <button
                       id="editorHighlightButton"
@@ -509,7 +509,7 @@ See https://github.com/adobe-type-tools/cmap-resources
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
 
                 <div id="editorModeSeparator" class="verticalToolbarSeparator"></div>
 
@@ -548,7 +548,7 @@ See https://github.com/adobe-type-tools/cmap-resources
                   </button>
                   <div id="secondaryToolbar" class="hidden doorHangerRight menu">
                     <div id="secondaryToolbarButtonContainer" class="menuContainer">
-                      <button
+                      <!-- <button
                         id="secondaryOpenFile"
                         class="toolbarButton labeled"
                         type="button"
@@ -557,7 +557,7 @@ See https://github.com/adobe-type-tools/cmap-resources
                         data-l10n-id="pdfjs-open-file-button"
                       >
                         <span data-l10n-id="pdfjs-open-file-button-label">Open</span>
-                      </button>
+                      </button> -->
 
                       <div class="visibleMediumView">
                         <button
@@ -583,7 +583,7 @@ See https://github.com/adobe-type-tools/cmap-resources
                         </button>
                       </div>
 
-                      <div class="horizontalToolbarSeparator"></div>
+                      <div class="horizontalToolbarSeparator visibleMediumView"></div>
 
                       <button
                         id="presentationMode"
@@ -607,9 +607,8 @@ See https://github.com/adobe-type-tools/cmap-resources
                         <span data-l10n-id="pdfjs-bookmark-button-label">Current Page</span>
                       </a>
 
-                      <div id="viewBookmarkSeparator" class="horizontalToolbarSeparator"></div>
-
-                      <button
+                      <!-- <div id="viewBookmarkSeparator" class="horizontalToolbarSeparator"></div> -->
+                      <!-- <button
                         id="firstPage"
                         class="toolbarButton labeled"
                         type="button"
@@ -618,8 +617,8 @@ See https://github.com/adobe-type-tools/cmap-resources
                         data-l10n-id="pdfjs-first-page-button"
                       >
                         <span data-l10n-id="pdfjs-first-page-button-label">Go to First Page</span>
-                      </button>
-                      <button
+                      </button> -->
+                      <!-- <button
                         id="lastPage"
                         class="toolbarButton labeled"
                         type="button"
@@ -628,7 +627,7 @@ See https://github.com/adobe-type-tools/cmap-resources
                         data-l10n-id="pdfjs-last-page-button"
                       >
                         <span data-l10n-id="pdfjs-last-page-button-label">Go to Last Page</span>
-                      </button>
+                      </button> -->
 
                       <div class="horizontalToolbarSeparator"></div>
 
